--- a/environment.yaml
+++ b/environment.yaml
@@ -1,22 +1,19 @@
-name: compat_env
+name: ads_env
 channels:
   - pytorch
   - nvidia
   - conda-forge
   - defaults
 dependencies:
+  - asttokens=2.4.1=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
   - blas=1.0=mkl
-  - brotli=1.1.0=hcfcfb64_1
-  - brotli-bin=1.1.0=hcfcfb64_1
-  - brotlipy=0.7.0=py37h2bbff1b_1003
+  - brotli-python=1.0.9=py38hd77b12b_8
   - ca-certificates=2024.6.2=h56e8100_0
-  - certifi=2024.6.2=pyhd8ed1ab_0
-  - cffi=1.15.1=py37h2bbff1b_3
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - cloudpickle=2.2.1=pyhd8ed1ab_0
-  - cryptography=38.0.2=py37h953a470_1
-  - cuda-cccl=12.5.39=0
-  - cuda-cccl_win-64=12.5.39=0
+  - certifi=2024.6.2=py38haa95532_0
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - comm=0.2.2=pyhd8ed1ab_0
+  - cuda-cccl=12.4.127=0
   - cuda-cudart=11.8.89=0
   - cuda-cudart-dev=11.8.89=0
   - cuda-cupti=11.8.87=0
@@ -25,123 +22,150 @@ dependencies:
   - cuda-nvrtc=11.8.89=0
   - cuda-nvrtc-dev=11.8.89=0
   - cuda-nvtx=11.8.86=0
-  - cuda-profiler-api=12.5.39=0
+  - cuda-profiler-api=12.4.127=0
   - cuda-runtime=11.8.0=0
-  - cuda-version=12.5=3
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - cytoolz=0.12.0=py37hcc03f2d_0
-  - dask-core=2022.2.0=pyhd8ed1ab_0
+  - cudatoolkit=11.8.0=hd77b12b_0
+  - debugpy=1.8.1=py38hd3f51b4_0
   - decorator=5.1.1=pyhd8ed1ab_0
-  - fonttools=4.38.0=py37h51bd9d9_0
-  - freetype=2.12.1=hdaf720e_2
-  - fsspec=2023.1.0=pyhd8ed1ab_0
-  - idna=3.4=py37haa95532_0
-  - imageio=2.34.2=pyh12aca89_0
-  - intel-openmp=2024.2.0=h57928b3_978
-  - jpeg=9e=hcfcfb64_3
-  - kiwisolver=1.4.4=py37h8c56517_0
-  - lcms2=2.14=h90d422f_0
-  - lerc=4.0.0=h63175ca_0
-  - libblas=3.9.0=22_win64_mkl
-  - libbrotlicommon=1.1.0=hcfcfb64_1
-  - libbrotlidec=1.1.0=hcfcfb64_1
-  - libbrotlienc=1.1.0=hcfcfb64_1
-  - libcblas=3.9.0=22_win64_mkl
+  - executing=2.0.1=pyhd8ed1ab_0
+  - freetype=2.12.1=ha860e81_0
+  - gmpy2=2.1.2=py38h7f96b67_0
+  - idna=3.7=py38haa95532_0
+  - importlib-metadata=7.2.1=pyha770c72_0
+  - importlib_metadata=7.2.1=hd8ed1ab_0
+  - ipykernel=6.29.4=pyh4bbf305_0
+  - ipython=8.12.2=pyh08f2357_0
+  - jedi=0.19.1=pyhd8ed1ab_0
+  - jpeg=9e=h2bbff1b_1
+  - jupyter_client=8.6.2=pyhd8ed1ab_0
+  - jupyter_core=5.7.2=py38haa244fe_0
+  - krb5=1.21.2=heb0366b_0
+  - lcms2=2.12=h83e58a3_0
+  - lerc=3.0=hd77b12b_0
   - libcublas=11.11.3.6=0
   - libcublas-dev=11.11.3.6=0
   - libcufft=10.9.0.58=0
   - libcufft-dev=10.9.0.58=0
-  - libcurand=10.3.6.39=0
-  - libcurand-dev=10.3.6.39=0
+  - libcurand=10.3.5.147=0
+  - libcurand-dev=10.3.5.147=0
   - libcusolver=11.4.1.48=0
   - libcusolver-dev=11.4.1.48=0
   - libcusparse=11.7.5.86=0
   - libcusparse-dev=11.7.5.86=0
-  - libdeflate=1.14=hcfcfb64_0
-  - libhwloc=2.10.0=default_h8125262_1001
-  - libiconv=1.17=hcfcfb64_2
-  - liblapack=3.9.0=22_win64_mkl
+  - libdeflate=1.17=h2bbff1b_1
+  - libffi=3.4.4=hd77b12b_1
+  - libjpeg-turbo=2.0.0=h196d8e1_0
   - libnpp=11.8.0.86=0
   - libnpp-dev=11.8.0.86=0
   - libnvjpeg=11.9.0.86=0
   - libnvjpeg-dev=11.9.0.86=0
-  - libpng=1.6.43=h19919ed_0
-  - libtiff=4.4.0=hc4f729c_5
+  - libpng=1.6.39=h8cc25b3_0
+  - libsodium=1.0.18=h8d14728_1
+  - libtiff=4.5.1=hd77b12b_0
   - libuv=1.44.2=h2bbff1b_0
-  - libwebp-base=1.4.0=hcfcfb64_0
-  - libxcb=1.13=hcd874cb_1004
-  - libxml2=2.12.7=h283a6d9_1
-  - libzlib=1.3.1=h2466b09_1
-  - locket=1.0.0=pyhd8ed1ab_0
-  - m2w64-gcc-libgfortran=5.3.0=6
-  - m2w64-gcc-libs=5.3.0=7
-  - m2w64-gcc-libs-core=5.3.0=7
-  - m2w64-gmp=6.1.0=2
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - matplotlib-base=3.5.3=py37hbaab90a_2
-  - mkl=2024.1.0=h66d3029_692
-  - msys2-conda-epoch=20160418=1
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - networkx=2.3=py_0
-  - numpy=1.21.6=py37h2830a78_0
-  - openjpeg=2.5.0=hc9384bd_1
-  - openssl=3.3.1=h2466b09_1
-  - packaging=23.2=pyhd8ed1ab_0
-  - partd=1.4.1=pyhd8ed1ab_0
-  - pillow=9.2.0=py37h42a8222_2
-  - pip=22.3.1=py37haa95532_0
-  - pthread-stubs=0.4=hcd874cb_1001
-  - pthreads-win32=2.9.1=hfa6e2cd_3
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pyopenssl=23.0.0=py37haa95532_0
-  - pyparsing=3.1.2=pyhd8ed1ab_0
-  - pysocks=1.7.1=py37_1
-  - python=3.7.12=h900ac77_100_cpython
-  - python-dateutil=2.9.0=pyhd8ed1ab_0
-  - python_abi=3.7=4_cp37m
-  - pytorch=1.13.1=py3.7_cpu_0
+  - libwebp-base=1.3.2=h2bbff1b_0
+  - lz4-c=1.9.4=h2bbff1b_1
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
+  - mkl-service=2.4.0=py38h2bbff1b_0
+  - mkl_fft=1.3.1=py38h277e83a_0
+  - mkl_random=1.2.2=py38hf11a4ad_0
+  - mpc=1.1.0=h7edee0f_1
+  - mpfr=4.0.2=h62dcd97_1
+  - mpir=3.0.0=hec2e145_1
+  - mpmath=1.3.0=py38haa95532_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
+  - openjpeg=2.4.0=h4afccc4_1
+  - openssl=3.3.1=h2466b09_0
+  - packaging=24.1=pyhd8ed1ab_0
+  - parso=0.8.4=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
+  - pip=24.0=py38haa95532_0
+  - platformdirs=4.2.2=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.47=pyha770c72_0
+  - prompt_toolkit=3.0.47=hd8ed1ab_0
+  - psutil=5.9.8=py38h91455d4_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pygments=2.18.0=pyhd8ed1ab_0
+  - pysocks=1.7.1=py38haa95532_0
+  - python=3.8.19=h1aa4202_0
+  - python_abi=3.8=2_cp38
+  - pytorch=2.3.1=py3.8_cuda11.8_cudnn8_0
   - pytorch-cuda=11.8=h24eeafa_5
-  - pytorch-mutex=1.0=cpu
-  - pywavelets=1.3.0=py37h3a130e4_1
-  - pyyaml=6.0=py37hcc03f2d_4
-  - requests=2.28.1=py37haa95532_0
-  - scikit-image=0.14.2=py37h6538335_1
-  - scipy=1.7.3=py37hb6553fb_0
-  - setuptools=65.6.3=py37haa95532_0
+  - pytorch-mutex=1.0=cuda
+  - pywin32=306=py38hd3f51b4_2
+  - pyyaml=6.0.1=py38h2bbff1b_0
+  - pyzmq=26.0.3=py38h3c56b06_0
+  - setuptools=69.5.1=py38haa95532_0
   - six=1.16.0=pyh6c4a22f_0
   - sqlite=3.45.3=h2bbff1b_0
-  - tbb=2021.12.0=hc790b64_1
-  - tk=8.6.13=h5226925_1
-  - toolz=0.12.1=pyhd8ed1ab_0
-  - torchaudio=0.13.1=py37_cpu
-  - torchvision=0.14.1=py37_cpu
-  - typing-extensions=4.7.1=hd8ed1ab_0
-  - typing_extensions=4.7.1=pyha770c72_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - tornado=6.4.1=py38h4cb3324_0
+  - traitlets=5.14.3=pyhd8ed1ab_0
+  - typing_extensions=4.12.2=pyha770c72_0
   - ucrt=10.0.22621.0=h57928b3_0
-  - unicodedata2=14.0.0=py37hcc03f2d_1
-  - urllib3=1.26.14=py37haa95532_0
-  - vc=14.2=h2eaa2aa_4
+  - urllib3=2.2.2=py38haa95532_0
+  - vc=14.2=h2eaa2aa_1
   - vc14_runtime=14.40.33810=ha82c5b3_20
   - vs2015_runtime=14.40.33810=h3bf8584_20
-  - wheel=0.38.4=py37haa95532_0
-  - win_inet_pton=1.1.0=py37haa95532_0
-  - wincertstore=0.2=py37haa95532_2
-  - xorg-libxau=1.0.11=hcd874cb_0
-  - xorg-libxdmcp=1.1.3=hcd874cb_0
-  - xz=5.2.6=h8d14728_0
-  - yaml=0.2.5=h8ffe710_2
-  - zstd=1.5.6=h0ea2cb4_0
+  - wcwidth=0.2.13=pyhd8ed1ab_0
+  - wheel=0.43.0=py38haa95532_0
+  - win_inet_pton=1.1.0=py38haa95532_0
+  - xz=5.4.6=h8cc25b3_1
+  - yaml=0.2.5=he774522_0
+  - zeromq=4.3.5=he1f189c_4
+  - zipp=3.19.2=pyhd8ed1ab_0
+  - zlib=1.2.13=h8cc25b3_1
+  - zstd=1.5.5=hd43e919_2
   - pip:
-      - colorama==0.4.6
-      - jinja2==3.1.4
-      - joblib==1.3.2
+      - aiohttp==3.9.5
+      - aiosignal==1.3.1
+      - async-timeout==4.0.3
+      - attrs==23.2.0
+      - charset-normalizer==3.3.2
+      - contourpy==1.1.1
+      - cycler==0.12.1
+      - filelock==3.15.4
+      - fonttools==4.53.0
+      - frozenlist==1.4.1
+      - fsspec==2024.6.1
+      - imageio==2.34.2
+      - importlib-resources==6.4.0
+      - intel-openmp==2021.4.0
+      - jinja2==3.1.3
+      - joblib==1.4.2
+      - kiwisolver==1.4.5
+      - lazy-loader==0.4
+      - lxml==5.2.2
       - markupsafe==2.1.5
+      - matplotlib==3.7.5
+      - mkl==2021.4.0
+      - multidict==6.0.5
+      - networkx==3.1
+      - nibabel==5.2.1
+      - nilearn==0.10.4
+      - numpy==1.24.4
       - opencv-python==4.10.0.84
-      - pandas==1.3.5
-      - psutil==6.0.0
+      - pandas==1.1.5
+      - pillow==10.4.0
+      - pyparsing==3.1.2
+      - python-dateutil==2.9.0.post0
       - pytz==2024.1
-      - scikit-learn==1.0.2
-      - threadpoolctl==3.1.0
-      - torch-geometric==2.3.1
+      - pywavelets==1.4.1
+      - requests==2.32.3
+      - scikit-image==0.21.0
+      - scikit-learn==1.3.2
+      - scipy==1.10.1
+      - seaborn==0.13.2
+      - sympy==1.12.1
+      - tbb==2021.13.0
+      - threadpoolctl==3.5.0
+      - tifffile==2023.7.10
+      - torch==2.3.1+cu118
+      - torch-geometric==2.5.3
+      - torchaudio==2.3.1+cu118
+      - torchvision==0.18.1+cu118
       - tqdm==4.66.4
-prefix: C:\Users\phili.BENS-GAMING-PC\anaconda3\envs\compat_env
+      - tzdata==2024.1
+      - yacs==0.1.8
+      - yarl==1.9.4
+prefix: C:\Users\phili.BENS-GAMING-PC\anaconda3\envs\ads_env
